fix 🐞: Errors in base of application
