# src/routes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import swaggerUi from 'swagger-ui-express';
 
+import { ensureAuthenticateClient } from './middlewares/ensureAuthenticateClient';
 import { AuthenticateClientController } from './modules/account/useCases/authenticateClient/AuthenticateClientController';
 import { AuthenticateDeliverymanController } from './modules/account/useCases/authenticateDeliveryman/AuthenticateDeliverymanController';
 import { CreateClientController } from './modules/clients/useCases/createClient/CreateClientController';
@@ -28,6 +29,10 @@ routes.post(
   authenticateDeliverymanController.handle
 );
 
-routes.post('/delivery/', createDeliveryController.handle);
+routes.post(
+  '/delivery/',
+  ensureAuthenticateClient,
+  createDeliveryController.handle
+);
 
 export { routes };
